@startuml
entity "Users" {
    + user_id : INT
    --
    employee_id : INT
    user_type : ENUM
    first_name : VARCHAR
    last_name : VARCHAR
}

entity "Food_Items" {
    + food_id : INT
    --
    food_name : VARCHAR
    price : DECIMAL
    is_available : BOOL
    description : TEXT
}

entity "Food_Feedback" {
    + feedback_id : INT
    --
    food_id : INT
    user_id : INT
    taste_rating : INT
    quality_rating : INT
    review : TEXT
}

entity "Daily_Rollout" {
    + rollout_id : INT
    --
    date : DATE
    meal_type : ENUM
    food_id : INT
}

entity "Rollout_Voting" {
    + voting_id : INT
    --
    rollout_id : INT
    user_id : INT
}

entity "Daily_Menu" {
    + daily_menu_id : INT
    --
    food_id : INT
    date : DATE
}

entity "Daily_Menu_Response" {
    + daily_menu_id : INT
    + user_id : INT
    --
    response : ENUM
}

entity "User_Notification" {
    + notification_id : INT
    + message : TEXT
    + notification_type : ENUM
    + user_id : INT
}

Users ||--o{ Food_Feedback : "user_id"
Food_Items ||--o{ Food_Feedback : "food_id"

Food_Items ||--o{ Daily_Rollout : "food_id"

Daily_Rollout ||--o{ Rollout_Voting : "rollout_id"
Users ||--o{ Rollout_Voting : "user_id"

Food_Items ||--o{ Daily_Menu : "food_id"

Daily_Menu ||--o{ Daily_Menu_Response : "daily_menu_id"
Users ||--o{ Daily_Menu_Response : "user_id"

Users ||--o{ User_Notification : "user_id"
@enduml
